--- a/scripts/02_feature_selection/run.ipynb
+++ b/scripts/02_feature_selection/run.ipynb
@@ -27,13 +27,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "65ea1db6-55bb-48ec-a68e-b0d72cd3c14d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[list([0.002502063366242834, -0.062323195897534094]),\n",
+       "        list([0.0008009234951402958, -0.016274437403398977]),\n",
+       "        list([0.0008779751271326162, -0.01853311360944046]), ..., 0, 500,\n",
+       "        'Unevolved'],\n",
+       "       [list([-1.3949150983730624e-05, -0.04573865687381554]),\n",
+       "        list([1.4016486252672046e-05, -0.012866889009572113]),\n",
+       "        list([6.762855018961798e-05, -0.011605574043219689]), ..., 0,\n",
+       "        501, 'Unevolved'],\n",
+       "       [list([-0.0001223306047588642, -0.05077343366104553]),\n",
+       "        list([0.0010317143141218578, -0.01492277188323678]),\n",
+       "        list([-0.0003140312287065775, -0.02059521771059378]), ..., 0,\n",
+       "        502, 'Unevolved'],\n",
+       "       ...,\n",
+       "       [list([0.0015429532007033492, -0.0284484426835943]),\n",
+       "        list([0.0014899579599065686, -0.008607768766219598]),\n",
+       "        list([2.0719986203840193e-05, -0.01266098070250742]), ..., 0,\n",
+       "        997, 'Unevolved'],\n",
+       "       [list([-0.002448010059659936, -0.0029987619160953185]),\n",
+       "        list([0.00046556619348965387, -0.00299511147488412]),\n",
+       "        list([-0.001343630241674254, -0.005130075278487797]), ..., 0,\n",
+       "        998, 'Unevolved'],\n",
+       "       [list([0.0023826146276426903, 0.03956642596421404]),\n",
+       "        list([0.0018163065072368703, 0.00810780140532143]),\n",
+       "        list([-6.120307460289645e-05, 0.00771879378693559]), ..., 0, 999,\n",
+       "        'Unevolved']], dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.DataFrame()\n",
-    "df[\"hi\"] = [1,2]"
+    "np.load(\"../01_read_trr/ML_INPUT_0_1.npy\",allow_pickle=True)"
    ]
   },
   {
